# solo-travel

./: .gitignore  index.html  justfile  pyproject.toml
.github/workflows/: deploy.yml
data/: accommodations.csv  shows.csv  stays.csv  transit.csv
src/: build.py  engine.py
src/templates/: dashboard.html  map_popup.html
